# win-bt-stereo-vs-handsfree

./: .gitignore  Cargo.toml  LICENSE  README.md  build.rs
.github/: dependabot.yml
locales/: de.toml  en.toml  es.toml  fr.toml  ja.toml  zh-CN.toml  zh-TW.toml
resources/: app.manifest  app.rc
src/: error.rs  i18n.rs  lib.rs  logging.rs  main.rs  notifications.rs  process.rs  update.rs
src/audio/: device.rs  mod.rs  monitor.rs  session.rs  traits.rs
src/bluetooth/: control.rs  mod.rs
src/settings/: config.rs  mod.rs  window.rs
src/tray/: icon.rs  menu.rs  mod.rs
tests/: audio_session_tests.rs  config_tests.rs  mode_detection_tests.rs  process_validation_tests.rs
